fix bug in VST plugin exit
Former-commit-id: 18f393c632d8bb7a26c60efdcecf73cb7c6e8c79

--- a/Client/src/resources/qtlogging.ini
+++ b/Client/src/resources/qtlogging.ini
@@ -1,9 +1,9 @@
 [Rules]
-*.debug=false
+#*.debug=false
 qt.network.ssl.warning=false
 #recorder=true
 #ipToLocation=true
-controller.ninjam=true
+#controller.ninjam=true
 #ninjam.service=true
 #controller.main=true
 #ninjamRoomWindow=true
