--- a/Client/src/resources/qtlogging.ini
+++ b/Client/src/resources/qtlogging.ini
@@ -1,12 +1,12 @@
 [Rules]
 *.debug=false
 qt.network.ssl.warning=false
-#recorder=true
+recorder=true
 #ipToLocation=true
-controller.ninjam=true
-ninjam.service=true
-controller.main=true
-ninjamRoomWindow=true
+#controller.ninjam=true
+#ninjam.service=true
+#controller.main=true
+#ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
 #vst=true
