cleaning wrong warnings in code
Former-commit-id: 3cc2d1c5aae8f1bc7789547274eabd515ea761c5

--- a/Client/src/resources/qtlogging.ini
+++ b/Client/src/resources/qtlogging.ini
@@ -1,7 +1,8 @@
 [Rules]
 *.debug=false
+*.info=true
 qt.network.ssl.warning=false
-recorder=true
+#recorder=true
 #ipToLocation=true
 #controller.ninjam=true
 #ninjam.service=true
