--- a/src/resources/qtlogging.ini
+++ b/src/resources/qtlogging.ini
@@ -1,7 +1,8 @@
 [Rules]
 *.debug=false
+*.info=true
 qt.network.ssl.warning=false
-recorder=true
+#recorder=true
 #ipToLocation=true
 #controller.ninjam=true
 #ninjam.service=true
