--- a/src/resources/qtlogging.ini
+++ b/src/resources/qtlogging.ini
@@ -2,16 +2,16 @@
 *.debug=false
 qt.network.ssl.warning=false
 recorder=true
-#ipToLocation=true
-#controller.ninjam=true
-#ninjam.service=true
-#controller.main=true
-#ninjamRoomWindow=true
-#vorbis.encoder=true
-#roomStreamer=true
-#vst=true
-#vst.host=true
-#portaudio=true
+ipToLocation=true
+controller.ninjam=true
+ninjam.service=true
+controller.main=true
+ninjamRoomWindow=true
+vorbis.encoder=true
+roomStreamer=true
+vst=true
+vst.host=true
+portaudio=true
 midi=true
-#plugin.vst=true
+plugin.vst=true
 
