--- a/Client/src/resources/logging.ini
+++ b/Client/src/resources/logging.ini
@@ -1,18 +1,25 @@
 [Rules]
-*.debug=false
-*.info=true
-qt.network.ssl.warning=false
-#recorder=true
-#ipToLocation=true
-#controller.ninjam=true
-#ninjam.service=true
-#controller.main=true
-#ninjamRoomWindow=true
-#vorbis.encoder=true
-#roomStreamer=true
-#vst=true
-#vst.host=true
-#portaudio=true
-#midi=true
-#plugin.vst=true
 
+jt.Core=false
+jt.GUI=false
+jt.Ninjam.Core=false
+jt.LoginService=false
+jt.JamRecorder=false
+jt.IpToLocation=false
+jt.Ninjam.Protocol=false
+jt.Ninjam.GUI=false
+jt.Ninjam.VorbisEncoder=false
+jt.Ninjam.VorbisDecoder=false
+jt.Ninjam.RoomStreamer=false
+jt.Standalone.VstPlugin=false
+jt.Standalone.VstHost=false
+jt.VstPlugin=false
+jt.Audio=false
+jt.Midi=false
+
+
+#*.debug=false
+#*.info=false
+
+#supressing ssl warnings
+qt.network.ssl.warning=false
