--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -13,6 +13,7 @@ jt.Ninjam.VorbisDecoder=false
 jt.Ninjam.RoomStreamer=false
 jt.Standalone.VstPlugin=false
 jt.Standalone.VstHost=false
+jt.Standalone.PluginFinder=false
 jt.VstPlugin=false
 jt.Audio=false
 jt.Midi=false
