--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -1,24 +1,25 @@
 [Rules]
 
-jt.Standalone.PluginFinder=false
-jt.Audio=false
-jt.Midi=false
-jt.Core=false
-jt.GUI=false
-jt.Ninjam.Core=false
-jt.LoginService=false
-jt.JamRecorder=false
-jt.IpToLocation=false
-jt.Ninjam.Protocol=false
-jt.Ninjam.GUI=false
-jt.Ninjam.VorbisEncoder=false
-jt.Ninjam.VorbisDecoder=false
-jt.Ninjam.RoomStreamer=false
-jt.Standalone.VstPlugin=false
-jt.Standalone.VstHost=false
-jt.VstPlugin=false
+#these are the logging rules. Change a rule to "true" to activate. For example, to se the
+#details about VST plugins scanning change the line below to jt.Standalone.PluginFinder=true
 
-
+jt.Standalone.PluginFinder=false    #VST plugins scanning
+jt.Audio=false                      #Audio initialization
+jt.Midi=false                       #Midi initiatlization
+jt.Core=false                       #Main internal routines
+jt.GUI=false                        #Graphic User Interface (GUI)
+jt.Ninjam.Core=false                #Ninjam internal routine
+jt.Ninjam.Protocol=false            #Log about ninjam client/server communication.
+jt.LoginService=false               #Communication between Jamtaba and Jamtaba server. Jamtaba server just return a list of public rooms including the musicians in each room.
+jt.JamRecorder=false                #Show the recording multitrack details when this option is enabled in Preferences.
+jt.IpToLocation=false               #Jamtaba is using a free webservice to translate IPs to country names.
+jt.Ninjam.GUI=false                 #Ninjam Graphic User Interface (GUI) details
+jt.Ninjam.VorbisEncoder=false       #Ninjam audio encoding (transmiting audio)
+jt.Ninjam.VorbisDecoder=false       #Ninjam audio decoding (receiving audio)
+jt.Ninjam.RoomStreamer=false        #Log about public rooms audio previewing.
+jt.Standalone.VstPlugin=false       #Log VST plugins initialization and other details in Jamtaba Standalone.
+jt.Standalone.VstHost=false         #Log VST host stuff in Jamtaba Standalone. Jamtaba standalone is a VST host too.
+jt.VstPlugin=false                  #This log is used only when you are running the VST plugin.
 
 #*.debug=false
 #*.info=false
