--- a/Server/web/WEB-INF/web.xml
+++ b/Server/web/WEB-INF/web.xml
@@ -15,7 +15,7 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     <!-- chat-->
-    <servlet>
+    <!--servlet>
         <servlet-name>ChatChannelServlet</servlet-name>
         <servlet-class>masl.channel.ChatChannelServlet</servlet-class>
     </servlet>
@@ -30,7 +30,7 @@
     <servlet-mapping>
         <servlet-name>ChatServlet</servlet-name>
         <url-pattern>/chat/*</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping-->
     <!-- necessário para que o Objectify 4 trate adequadamente a persistência assíncrona. Sem isso eu tive problemas na persistência -->
     <filter>
         <filter-name>ObjectifyFilter</filter-name>
@@ -40,6 +40,43 @@
         <filter-name>ObjectifyFilter</filter-name>
         <url-pattern>/vs/*</url-pattern>
     </filter-mapping>
+    
+    <!-- GAE appstats -->
+    <filter>
+        <filter-name>appstats</filter-name>
+        <filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
+        <init-param>
+            <param-name>calculateRpcCosts</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>appstats</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <servlet>
+        <servlet-name>appstats</servlet-name>
+        <servlet-class>com.google.appengine.tools.appstats.AppstatsServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>appstats</servlet-name>
+        <url-pattern>/appstats/*</url-pattern>
+    </servlet-mapping>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>appstats</web-resource-name>
+            <url-pattern>/appstats/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    
     <!-- HTTPs -->
     <!--security-constraint>
         <display-name>HTTPS</display-name>
