--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -20,6 +20,7 @@ jt.Ninjam.RoomStreamer=false
 jt.Standalone.VstPlugin=false
 jt.Standalone.VstHost=false
 jt.VstPlugin=false
+Jt.Configurator=false
 
 #*.debug=false
 #*.info=false
