--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -5,7 +5,7 @@
 
 jt.Standalone.PluginFinder=false
 jt.Audio=false
-jt.Midi=true
+jt.Midi=false
 jt.Core=false
 jt.GUI=false
 jt.Ninjam.Core=false
@@ -20,7 +20,7 @@ jt.Ninjam.RoomStreamer=false
 jt.Standalone.VstPlugin=false
 jt.Standalone.VstHost=false
 jt.VstPlugin=false
-Jt.Configurator=false
+jt.Configurator=false
 
 #*.debug=false
 #*.info=false
