--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -19,8 +19,10 @@ jt.Ninjam.VorbisDecoder=false
 jt.Ninjam.RoomStreamer=false
 jt.Standalone.VstPlugin=false
 jt.Standalone.VstHost=false
+jt.Standalone.PluginFinder=false
 jt.VstPlugin=false
 jt.Configurator=false
+
 
 #*.debug=false
 #*.info=false
