remembering user pan, gain, boost, mute #201

--- a/Client/src/resources/logging.ini
+++ b/Client/src/resources/logging.ini
@@ -12,6 +12,7 @@ jt.Ninjam.Core=false
 jt.Ninjam.Protocol=false
 jt.LoginService=false
 jt.JamRecorder=false
+jt.Cache=false
 jt.IpToLocation=false
 jt.Ninjam.GUI=false
 jt.Ninjam.VorbisEncoder=false
