improving gitigone and cleaning .DS_STORE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-*.[o]
-# *~
+# C++ objects and libs
+
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
 
 *.ogg
 *.exe
@@ -9,6 +18,33 @@ VST_SDK/*
 
 *.DS_Store
 
+# Qt-es
+
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*build-*
+
+# QtCreator
+
+*.autosave
+
+#QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
+
+
+# Jamtaba server
+
 Server/build/
 Server/dist
 Server/nbproject/private
+
