--- a/Server/nbproject/project.properties
+++ b/Server/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.httpcore-4.2.2.jar=lib\\httpcore-4.2.2.jar
 file.reference.ip2c.jar=lib\\ip2c.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.objectify-5.0.2.jar=lib\\objectify-5.0.2.jar
+file.reference.objectify-5.1.1.jar=lib\\objectify-5.1.1.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=false
@@ -53,11 +54,11 @@ javac.classpath=\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.httpcore-4.2.2.jar}:\
-    ${file.reference.objectify-5.0.2.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.guava-17.0.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.ip2c.jar}
+    ${file.reference.ip2c.jar}:\
+    ${file.reference.objectify-5.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +70,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-lang-2.6.jar}:\
