--- a/Server/nbproject/project.properties
+++ b/Server/nbproject/project.properties
@@ -10,6 +10,7 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js
+auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -40,7 +41,6 @@ file.reference.httpclient-4.2.3.jar=lib\\httpclient-4.2.3.jar
 file.reference.httpcore-4.2.2.jar=lib\\httpcore-4.2.2.jar
 file.reference.ip2c.jar=lib\\ip2c.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
-file.reference.objectify-5.0.2.jar=lib\\objectify-5.0.2.jar
 file.reference.objectify-5.1.1.jar=lib\\objectify-5.1.1.jar
 includes=**
 j2ee.compile.on.save=false
@@ -65,20 +65,11 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-lang-2.6.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.guava-17.0.jar}:\
-    ${file.reference.httpclient-4.2.3.jar}:\
-    ${file.reference.httpcore-4.2.2.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.objectify-5.0.2.jar}
+    ${build.classes.dir}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
