--- a/installers/linux/Jamtaba2.desktop
+++ b/installers/linux/Jamtaba2.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=/home/elieser/Jamtaba2/Jamtaba2.sh
+Exec=_DEST_DIR/Jamtaba2.sh
 Name=Jamtaba 2
 GenericName=Jamtaba 2 - Play online music jam sessions.
 Icon=Jamtaba2
