--- a/PROJECTS/AUPlugin/Info.plist
+++ b/PROJECTS/AUPlugin/Info.plist
@@ -16,9 +16,9 @@
 			<key>sandboxSafe</key>
 			<true/>
 			<key>subtype</key>
-			<string>FILT</string>
+			<string>smxr</string>
 			<key>type</key>
-			<string>aumx</string>
+			<string>aufx</string>
 			<key>version</key>
 			<integer>65536</integer>
 		</dict>
