--- a/PROJECTS/AUPlugin/version.plist
+++ b/PROJECTS/AUPlugin/version.plist
@@ -11,7 +11,7 @@
 	<key>ProductBuildVersion</key>
 	<string>7K571</string>
 	<key>ProjectName</key>
-	<string>Filter</string>
+	<string>JamTaba</string>
 	<key>SourceVersion</key>
 	<string>140000</string>
 </dict>
