--- a/PROJECTS/AUPlugin/CocoaJamTabaView.plist
+++ b/PROJECTS/AUPlugin/CocoaJamTabaView.plist
@@ -5,11 +5,9 @@
 	<key>CFBundleExecutable</key>
 	<string>CocoaJamTabaView</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.DEMO.audiounit.Filter</string>
+	<string>com.jamtaba.audiounit.JamTaba</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
-	<key>NSMainNibFile</key>
-	<string>CocoaView</string>
 	<key>NSPrincipalClass</key>
 	<string>DEMOFilter_ViewFactory</string>
 </dict>
