:bug: Fixing jt.Settings in logging

--- a/src/resources/logging.ini
+++ b/src/resources/logging.ini
@@ -22,7 +22,7 @@ jt.Standalone.VstHost=false
 jt.Standalone.PluginFinder=false
 jt.VstPlugin=false
 jt.Configurator=false
-
+jt.Settings=false
 
 #*.debug=false
 #*.info=false
