--- a/PROJECTS/uncrustify.cfg
+++ b/PROJECTS/uncrustify.cfg
@@ -87,10 +87,10 @@ indent_braces_no_struct                  = false    # false/true
 indent_brace_parent                      = false    # false/true
 
 # Whether the 'namespace' body is indented
-indent_namespace                         = false    # false/true
+indent_namespace                         = true    # false/true
 
 # The number of spaces to indent a namespace block
-indent_namespace_level                   = 0        # number
+indent_namespace_level                   = 4        # number
 
 # If the body of the namespace is longer than this number, it won't be indented.
 # Requires indent_namespace=true. Default=0 (no limit)
@@ -734,9 +734,6 @@ align_with_tabs                          = false    # false/true
 # Whether to bump out to the next tab when aligning
 align_on_tabstop                         = false    # false/true
 
-# Whether to left-align numbers
-align_number_left                        = false    # false/true
-
 # Whether to keep whitespace not required for alignment.
 align_keep_extra_space                   = false    # false/true
 
@@ -971,29 +968,29 @@ nl_var_def_blk_in                        = 0        # number
 
 # Add or remove newline between a function call's ')' and '{', as in:
 # list_for_each(item, &list) { }
-nl_fcall_brace                           = ignore   # ignore/add/remove/force
+nl_fcall_brace                           = force   # ignore/add/remove/force
 
 # Add or remove newline between 'enum' and '{'
-nl_enum_brace                            = ignore   # ignore/add/remove/force
+nl_enum_brace                            = force   # ignore/add/remove/force
 
 # Add or remove newline between 'struct and '{'
-nl_struct_brace                          = ignore   # ignore/add/remove/force
+nl_struct_brace                          = force   # ignore/add/remove/force
 
 # Add or remove newline between 'union' and '{'
-nl_union_brace                           = ignore   # ignore/add/remove/force
+nl_union_brace                           = force   # ignore/add/remove/force
 
 # Add or remove newline between 'if' and '{'
-nl_if_brace                              = remove   # ignore/add/remove/force
+nl_if_brace                              = force   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'else'
-nl_brace_else                            = remove   # ignore/add/remove/force
+nl_brace_else                            = force   # ignore/add/remove/force
 
 # Add or remove newline between 'else if' and '{'
 # If set to ignore, nl_if_brace is used instead
-nl_elseif_brace                          = remove   # ignore/add/remove/force
+nl_elseif_brace                          = force   # ignore/add/remove/force
 
 # Add or remove newline between 'else' and '{'
-nl_else_brace                            = remove   # ignore/add/remove/force
+nl_else_brace                            = force   # ignore/add/remove/force
 
 # Add or remove newline between 'else' and 'if'
 nl_else_if                               = remove   # ignore/add/remove/force
@@ -1002,25 +999,25 @@ nl_else_if                               = remove   # ignore/add/remove/force
 nl_brace_finally                         = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'finally' and '{'
-nl_finally_brace                         = ignore   # ignore/add/remove/force
+nl_finally_brace                         = force   # ignore/add/remove/force
 
 # Add or remove newline between 'try' and '{'
-nl_try_brace                             = ignore   # ignore/add/remove/force
+nl_try_brace                             = force   # ignore/add/remove/force
 
 # Add or remove newline between get/set and '{'
 nl_getset_brace                          = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'for' and '{'
-nl_for_brace                             = remove   # ignore/add/remove/force
+nl_for_brace                             = force # ignore/add/remove/force
 
 # Add or remove newline between 'catch' and '{'
-nl_catch_brace                           = ignore   # ignore/add/remove/force
+nl_catch_brace                           = force   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'catch'
-nl_brace_catch                           = ignore   # ignore/add/remove/force
+nl_brace_catch                           = force   # ignore/add/remove/force
 
 # Add or remove newline between 'while' and '{'
-nl_while_brace                           = ignore   # ignore/add/remove/force
+nl_while_brace                           = force   # ignore/add/remove/force
 
 # Add or remove newline between 'scope (x)' and '{' (D)
 nl_scope_brace                           = ignore   # ignore/add/remove/force
@@ -1039,13 +1036,13 @@ nl_using_brace                           = ignore   # ignore/add/remove/force
 nl_brace_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'do' and '{'
-nl_do_brace                              = remove   # ignore/add/remove/force
+nl_do_brace                              = force   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'while' of 'do' statement
-nl_brace_while                           = remove   # ignore/add/remove/force
+nl_brace_while                           = force   # ignore/add/remove/force
 
 # Add or remove newline between 'switch' and '{'
-nl_switch_brace                          = remove   # ignore/add/remove/force
+nl_switch_brace                          = force   # ignore/add/remove/force
 
 # Add a newline between ')' and '{' if the ')' is on a different line than the if/for/etc.
 # Overrides nl_for_brace, nl_if_brace, nl_switch_brace, nl_while_switch, and nl_catch_brace.
@@ -1067,7 +1064,7 @@ nl_after_case                            = true    # false/true
 nl_case_colon_brace                      = ignore   # ignore/add/remove/force
 
 # Newline between namespace and {
-nl_namespace_brace                       = remove   # ignore/add/remove/force
+nl_namespace_brace                       = force   # ignore/add/remove/force
 
 # Add or remove newline between 'template<>' and whatever follows.
 nl_template_class                        = ignore   # ignore/add/remove/force
@@ -1277,7 +1274,7 @@ pos_constr_colon = trail
 #
 
 # Try to limit code width to N number of columns
-code_width                               = 100        # number
+code_width                               = 160        # number
 
 # Whether to fully split long 'for' statements at semi-colons
 ls_for_split_full                        = false    # false/true
