--- a/PROJECTS/uncrustify.cfg
+++ b/PROJECTS/uncrustify.cfg
@@ -968,29 +968,29 @@ nl_var_def_blk_in                        = 0        # number
 
 # Add or remove newline between a function call's ')' and '{', as in:
 # list_for_each(item, &list) { }
-nl_fcall_brace                           = force   # ignore/add/remove/force
+nl_fcall_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'enum' and '{'
-nl_enum_brace                            = force   # ignore/add/remove/force
+nl_enum_brace                            = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'struct and '{'
-nl_struct_brace                          = force   # ignore/add/remove/force
+nl_struct_brace                          = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'union' and '{'
-nl_union_brace                           = force   # ignore/add/remove/force
+nl_union_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'if' and '{'
-nl_if_brace                              = force   # ignore/add/remove/force
+nl_if_brace                              = remove   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'else'
-nl_brace_else                            = force   # ignore/add/remove/force
+nl_brace_else                            = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'else if' and '{'
 # If set to ignore, nl_if_brace is used instead
-nl_elseif_brace                          = force   # ignore/add/remove/force
+nl_elseif_brace                          = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'else' and '{'
-nl_else_brace                            = force   # ignore/add/remove/force
+nl_else_brace                            = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'else' and 'if'
 nl_else_if                               = remove   # ignore/add/remove/force
