--- a/PROJECTS/uncrustify.cfg
+++ b/PROJECTS/uncrustify.cfg
@@ -999,25 +999,25 @@ nl_else_if                               = remove   # ignore/add/remove/force
 nl_brace_finally                         = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'finally' and '{'
-nl_finally_brace                         = force   # ignore/add/remove/force
+nl_finally_brace                         = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'try' and '{'
-nl_try_brace                             = force   # ignore/add/remove/force
+nl_try_brace                             = ignore   # ignore/add/remove/force
 
 # Add or remove newline between get/set and '{'
 nl_getset_brace                          = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'for' and '{'
-nl_for_brace                             = force # ignore/add/remove/force
+nl_for_brace                             = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'catch' and '{'
-nl_catch_brace                           = force   # ignore/add/remove/force
+nl_catch_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'catch'
-nl_brace_catch                           = force   # ignore/add/remove/force
+nl_brace_catch                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'while' and '{'
-nl_while_brace                           = force   # ignore/add/remove/force
+nl_while_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'scope (x)' and '{' (D)
 nl_scope_brace                           = ignore   # ignore/add/remove/force
@@ -1036,13 +1036,13 @@ nl_using_brace                           = ignore   # ignore/add/remove/force
 nl_brace_brace                           = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'do' and '{'
-nl_do_brace                              = force   # ignore/add/remove/force
+nl_do_brace                              = remove   # ignore/add/remove/force
 
 # Add or remove newline between '}' and 'while' of 'do' statement
-nl_brace_while                           = force   # ignore/add/remove/force
+nl_brace_while                           = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'switch' and '{'
-nl_switch_brace                          = force   # ignore/add/remove/force
+nl_switch_brace                          = remove   # ignore/add/remove/force
 
 # Add a newline between ')' and '{' if the ')' is on a different line than the if/for/etc.
 # Overrides nl_for_brace, nl_if_brace, nl_switch_brace, nl_while_switch, and nl_catch_brace.
