:art: Applied uncrustified.cfg style to recent contribs I did (#1154)
* Apply our crustify configuration to Configurator.cpp

* Add break to logHandler as no break  was met for default (INFO) case.
Found thanks to uncrustify reformatting!

* Apply uncrustify project config to recently modified files

* Apply uncrustify to previous Standalone controller to previous contributions I did

* As discussed, apply uncrustify changes to enhance readability and consistency of code blocks with zero exception, while allowing more modern max columns (now 160).

* Apply new uncrustify changes to recent contributions.

* Do add new line for braces

* Do not add new lines for braces

* Switch to Qt braces style in recent changes

* Undo other braces changes as well in other constructions

* Fix fo and while loops back to qt default

* Fix configurator back to qt style

* Fix User line length back to max of 160

* Fix more max line length in recent Configurator formatting changes

* Fix main max line length

--- a/PROJECTS/uncrustify.cfg
+++ b/PROJECTS/uncrustify.cfg
@@ -87,10 +87,10 @@ indent_braces_no_struct                  = false    # false/true
 indent_brace_parent                      = false    # false/true
 
 # Whether the 'namespace' body is indented
-indent_namespace                         = false    # false/true
+indent_namespace                         = true    # false/true
 
 # The number of spaces to indent a namespace block
-indent_namespace_level                   = 0        # number
+indent_namespace_level                   = 4        # number
 
 # If the body of the namespace is longer than this number, it won't be indented.
 # Requires indent_namespace=true. Default=0 (no limit)
@@ -734,9 +734,6 @@ align_with_tabs                          = false    # false/true
 # Whether to bump out to the next tab when aligning
 align_on_tabstop                         = false    # false/true
 
-# Whether to left-align numbers
-align_number_left                        = false    # false/true
-
 # Whether to keep whitespace not required for alignment.
 align_keep_extra_space                   = false    # false/true
 
@@ -1067,7 +1064,7 @@ nl_after_case                            = true    # false/true
 nl_case_colon_brace                      = ignore   # ignore/add/remove/force
 
 # Newline between namespace and {
-nl_namespace_brace                       = remove   # ignore/add/remove/force
+nl_namespace_brace                       = force   # ignore/add/remove/force
 
 # Add or remove newline between 'template<>' and whatever follows.
 nl_template_class                        = ignore   # ignore/add/remove/force
@@ -1277,7 +1274,7 @@ pos_constr_colon = trail
 #
 
 # Try to limit code width to N number of columns
-code_width                               = 100        # number
+code_width                               = 160        # number
 
 # Whether to fully split long 'for' statements at semi-colons
 ls_for_split_full                        = false    # false/true
