:apple: Fixing compilation in XCode 8
- Adding ChordProgressCreationDialog in the XCode Project and improving hardcoded paths

- Applying recommended settings in XCode project

- Improving library search paths

- Trying to solve missing PNGs warning

--- a/PROJECTS/AUPlugin/CocoaJamTabaView.plist
+++ b/PROJECTS/AUPlugin/CocoaJamTabaView.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleExecutable</key>
 	<string>CocoaJamTabaView</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.jamtaba.audiounit.JamTaba</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>NSPrincipalClass</key>
