--- a/installers/linux/Jamtaba2.desktop
+++ b/installers/linux/Jamtaba2.desktop
@@ -3,6 +3,6 @@ Type=Application
 Exec=_DEST_DIR/Jamtaba2.sh
 Name=Jamtaba 2
 GenericName=Jamtaba 2 - Play online music jam sessions.
-Icon=Jamtaba2
+Icon=Jamtaba2.png
 Terminal=false
 Categories=Music
